--- a/index.html
+++ b/index.html
@@ -2,28 +2,34 @@
 layout: default
 ---
 <header class="masthead">
-  <h1 class="masthead-title">
-    <a href="{{ site.baseurl }}/">{{ site.name }}</a>
-  </h1>
-  <nav class="masthead-nav">
-    {% for nav in site.nav %}
-    <a href="{{ nav.href }}">{{ nav.name }}</a>
-    {% endfor %}
-  </nav>
+    <h1 class="masthead-title">
+        <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+    </h1>
+    <nav class="masthead-nav">
+        {% for nav in site.nav %}
+            <a href="{{ nav.href }}">{{ nav.name }}</a>
+        {% endfor %}
+    </nav>
 </header>
 <div class="content list">
-{% if site.posts.size == 0 %}
-  <h2>No post found</h2>
-{% else %}
-{% for post in site.posts %}
-  <div class="list-item">
-    <h2 class="list-post-title">
-      <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-    </h2>
-    <div class="list-post-date">
-      <time>{{ post.date | date_to_string }}</time>
-    </div>
-  </div>
-{% endfor %}
-{% endif %}
+    {% if site.posts.size == 0 %}
+        <h2>No post found</h2>
+    {% else %}
+        {% for post in site.posts %}
+            <div class="list-item">
+                {% if post.ext-url == nil %}
+                    <h2 class="list-post-title">
+                        <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+                    </h2>
+                {% else %}
+                    <h2 class="list-post-title ext-url">
+                        <a href="{{ post.ext-url }}" target="_blank">{{ post.title }}</a>
+                    </h2>
+                {% endif %}
+                <div class="list-post-date">
+                    <time>{{ post.date | date_to_string }}</time>
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
 </div>
