--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 layout: default
 ---
 <header class="masthead">
+    {% include nav.html %}
     <h1 class="masthead-title">
         <a href="{{ site.baseurl }}/">{{ site.name }}</a>
     </h1>
-    <nav class="masthead-nav">
-        {% for nav in site.nav %}
-            <a href="{{ nav.href }}">{{ nav.name }}</a>
-        {% endfor %}
-    </nav>
 </header>
+{% include intro.html %}
 <div class="content list">
     {% if site.posts.size == 0 %}
         <h2>No post found</h2>
