--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
             <p>I like simple, clean and maintenable code. I deeply care about the code I write and the one I've been asked to look
             behind.</p>
             
-            <p>Currently I'm a senior developer at [Lifetronic](https://www.lifetronic.it) in Pisa.</p>
+            <p>Currently I'm a senior developer at Lifetronic SRL in Pisa.</p>
         </div>
 
         <!-- Column 2-->
